--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
-  <script src="Speakhello.js"></script>
+  <script src="speakhello.js"></script>
   <script src="speakgoodbye.js"></script>
   <script src="script.js"></script>
 
